option( CASTOR_BUILD_IMPORTER_ASSIMP "Build ASSIMP Importer plugin (needs ASSIMP library)" TRUE )
option( CASTOR_BUILD_IMPORTER_ASE "Build ASE Importer plugin" TRUE )
option( CASTOR_BUILD_IMPORTER_LWO "Build LWO Importer plugin" TRUE )
option( CASTOR_BUILD_IMPORTER_MD2 "Build MD2 Importer plugin" TRUE )
option( CASTOR_BUILD_IMPORTER_MD3 "Build MD3 Importer plugin" TRUE )
option( CASTOR_BUILD_IMPORTER_OBJ "Build OBJ Importer plugin" TRUE )
option( CASTOR_BUILD_IMPORTER_PLY "Build PLY Importer plugin" TRUE )
option( CASTOR_BUILD_IMPORTER_3DS "Build 3DS Importer plugin" TRUE )
option( CASTOR_FORCE_ALL_IMPORTERS "Build every Importer plugin regardless of the presence of ASSIMP" FALSE )

function( ImportersInit )
	set( Assimp "no (Not wanted)" PARENT_SCOPE )
	set( Ase "no (Not wanted)" PARENT_SCOPE )
	set( Md2 "no (Not wanted)" PARENT_SCOPE )
	set( Md3 "no (Not wanted)" PARENT_SCOPE )
	set( 3ds "no (Not wanted)" PARENT_SCOPE )
	set( Lwo "no (Not wanted)" PARENT_SCOPE )
	set( Obj "no (Not wanted)" PARENT_SCOPE )
	set( Ply "no (Not wanted)" PARENT_SCOPE )
endfunction( ImportersInit )

function( ImportersBuild )
	if( ${CASTOR_BUILD_IMPORTER_ASSIMP} )
		set( Build ${Assimp} )
		add_subdirectory( Importers/ASSIMPImporter )
		set( Assimp ${Build} PARENT_SCOPE )
	endif()

	STRING( FIND "${Build}" "yes" POS )
	if( ${POS} STREQUAL -1 OR CASTOR_FORCE_ALL_IMPORTERS )
		msg_debug( "using builtin importers" )
		if( ${CASTOR_BUILD_IMPORTER_ASE} )
			set( Build ${Ase} )
			add_subdirectory( Importers/AseImporter )
			set( Ase ${Build} PARENT_SCOPE )
		endif()
    	
		if( ${CASTOR_BUILD_IMPORTER_LWO} )
			set( Build ${Lwo} )
			add_subdirectory( Importers/LwoImporter )
			set( Lwo ${Build} PARENT_SCOPE )
		endif()
    	
		if( ${CASTOR_BUILD_IMPORTER_MD2} )
			set( Build ${Md2} )
			add_subdirectory( Importers/Md2Importer )
			set( Md2 ${Build} PARENT_SCOPE )
		endif()
    	
		if( ${CASTOR_BUILD_IMPORTER_MD3} )
			set( Build ${Md3} )
			add_subdirectory( Importers/Md3Importer )
			set( Md3 ${Build} PARENT_SCOPE )
		endif()
    	
		if( ${CASTOR_BUILD_IMPORTER_OBJ} )
			set( Build ${Obj} )
			add_subdirectory( Importers/ObjImporter )
			set( Obj ${Build} PARENT_SCOPE )
		endif()
    	
		if( ${CASTOR_BUILD_IMPORTER_PLY} )
			set( Build ${Ply} )
			add_subdirectory( Importers/PlyImporter )
			set( Ply ${Build} PARENT_SCOPE )
		endif()
    	
		if( ${CASTOR_BUILD_IMPORTER_3DS} )
			set( Build ${3ds} )
			add_subdirectory( Importers/SMaxImporter )
			set( 3ds ${Build} PARENT_SCOPE )
		endif()
	else()
		set( Ase "no (Not needed)" PARENT_SCOPE )
		set( Md2 "no (Not needed)" PARENT_SCOPE )
		set( Md3 "no (Not needed)" PARENT_SCOPE )
		set( 3ds "no (Not needed)" PARENT_SCOPE )
		set( Lwo "no (Not needed)" PARENT_SCOPE )
		set( Obj "no (Not needed)" PARENT_SCOPE )
		set( Ply "no (Not needed)" PARENT_SCOPE )
	endif()

	set( CastorMinLibraries
		${CastorMinLibraries}
		PARENT_SCOPE
	)

	set( CastorBinsDependencies
		${CastorBinsDependencies}
		PARENT_SCOPE
	)
endfunction( ImportersBuild )

function( ImportersSummary msg )
	SET( msg_tmp "\n\nImporters :" )
	SET( msg_tmp "${msg_tmp}\n    ASSIMP              ${Assimp}" )
	SET( msg_tmp "${msg_tmp}\n    Built-in ASE        ${Ase}" )
	SET( msg_tmp "${msg_tmp}\n    Built-in MD2        ${Md2}" )
	SET( msg_tmp "${msg_tmp}\n    Built-in MD3        ${Md3}" )
	SET( msg_tmp "${msg_tmp}\n    Built-in 3DS        ${3ds}" )
	SET( msg_tmp "${msg_tmp}\n    Built-in LWO        ${Lwo}" )
	SET( msg_tmp "${msg_tmp}\n    Built-in OBJ        ${Obj}" )
	SET( msg_tmp "${msg_tmp}\n    Built-in PLY        ${Ply}" )
	SET( msg "${msg}${msg_tmp}" PARENT_SCOPE )
endfunction( ImportersSummary )
