option( CASTOR_BUILD_SAMPLE_GUICOMMON "Build GuiCommon library (needs wxWidgets library)" FALSE )
option( CASTOR_BUILD_SAMPLE_CASTOR_VIEWER "Build CastorViewer (needs GuiCommon library)" FALSE )
option( CASTOR_BUILD_SAMPLE_CASTOR_SHAPE "Build CastorShape (needs GuiCommon library)" FALSE )
option( CASTOR_BUILD_SAMPLE_OCEAN_LIGHTING "Build Ocean Lighting FFT sample (needs wxWidgets library)" FALSE )
if ( MSVC )
	option( CASTOR_BUILD_SAMPLE_CASTOR_VIEWER_SHARP "Build CastorViewerSharp (needs ComCastor3D library)" FALSE )
endif ()

function( SamplesInit )
	set( GuiCmn "no (Not wanted)" PARENT_SCOPE )
	set( CViewer "no (Not wanted)" PARENT_SCOPE )
	set( CShape "no (Not wanted)" PARENT_SCOPE )
	set( ImgConv "no (Not wanted)" PARENT_SCOPE )
	set( Ocean "no (Not wanted)" PARENT_SCOPE )
	if ( MSVC )
		set( CViewSh "no (Not wanted)" PARENT_SCOPE )
	else ()
		set( CViewSh "no (Not available)" PARENT_SCOPE )
	endif ()
endfunction( SamplesInit )

function( SamplesBuild )
	if( ${CASTOR_BUILD_SAMPLE_GUICOMMON} OR ${CASTOR_BUILD_SAMPLE_CASTOR_VIEWER} OR ${CASTOR_BUILD_SAMPLE_CASTOR_SHAPE} OR ${CASTOR_BUILD_SAMPLE_OCEAN_LIGHTING} )
		if( NOT WIN32 )
			find_package( GTK2 )
		else()
			set( GTK2_FOUND TRUE )
		endif()
	
		#we look for wxWidgets
		if (WIN32)
			find_package( wxWidgets COMPONENTS stc scintilla core base aui )
		else ()
			find_package( wxWidgets COMPONENTS core base stc aui )
		endif()
	
		if( wxWidgets_FOUND AND GTK2_FOUND )
			message( STATUS "+ Found GTK2" )
			message( STATUS "+ Found wxWidgets" )
			include_directories( ${GTK2_INCLUDE_DIRS} )
			include_directories( ${wxWidgets_INCLUDE_DIRS} )
			#wxWidgets Libs
			set( wxWidgetsLibraries "" )
			foreach( Lib ${wxWidgets_LIBRARIES} )
				if( wxWidgetsLibraries )
					set( wxWidgetsLibraries "${wxWidgetsLibraries}|${Lib}" )
				else()
					set( wxWidgetsLibraries "${Lib}" )
				endif()
			endforeach()
	
			foreach( Lib ${GTK2_LIBRARIES} )
				if( wxWidgetsLibraries )
					set( wxWidgetsLibraries "${wxWidgetsLibraries}|${Lib}" )
				else()
					set( wxWidgetsLibraries "${Lib}" )
				endif()
			endforeach()
	
			#Few more configuration for wxWidgets
			string( COMPARE EQUAL "${wxWidgets_USE_DEBUG}" "ON" IsWxDebug )
			set( wxWidgets_CXXFLAGS "${wxWidgets_CXX_FLAGS} -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES" )
	
			if( NOT WIN32 )
				set( wxWidgets_CXXFLAGS "${wxWidgets_CXXFLAGS} -D__WXGTK__" )
			endif()
	
			if( IsWxDebug )
				set( wxWidgets_CXXFLAGS "${wxWidgets_CXXFLAGS} -D__WXDEBUG__" )
			endif()
	
			if( ${CASTOR_BUILD_SAMPLE_GUICOMMON} )
				set( Build ${GuiCmn} )
				add_subdirectory( Samples/GuiCommon )
				set( GuiCmn ${Build} PARENT_SCOPE )
	
				if( ${CASTOR_BUILD_SAMPLE_CASTOR_VIEWER} )
					set( Build ${CViewer} )
					add_subdirectory( Samples/CastorViewer )
					set( CViewer ${Build} PARENT_SCOPE )
				endif()
	
				if( ${CASTOR_BUILD_SAMPLE_CASTOR_SHAPE} )
					set( Build ${CShape} )
					add_subdirectory( Samples/CastorShape )
					set( CShape ${Build} PARENT_SCOPE )
				endif()
            elseif ( ${CASTOR_BUILD_SAMPLE_CASTOR_SHAPE} )
                message( WARNING "You need GuiCommon to be able to build CastorShape" )
            elseif ( ${CASTOR_BUILD_SAMPLE_CASTOR_VIEWER} )
                message( WARNING "You need GuiCommon to be able to build CastorViewer" )
			endif()
	
			if( ${CASTOR_BUILD_SAMPLE_OCEAN_LIGHTING} )
				set( Build ${Ocean} )
				add_subdirectory( Samples/OceanLighting )
				set( Ocean ${Build} PARENT_SCOPE )
			endif()
		else()
			if( NOT wxWidgets_FOUND )
				set( GuiCmn "no (wxWidgets libraries not found)" PARENT_SCOPE )
				set( CViewer "no (wxWidgets libraries not found)" PARENT_SCOPE )
				set( CShape "no (wxWidgets libraries not found)" PARENT_SCOPE )
				set( Ocean "no (wxWidgets libraries not found)" PARENT_SCOPE )
			else()
				set( GuiCmn "no (GTK2 libraries not found)" PARENT_SCOPE )
				set( CViewer "no (GTK2 libraries not found)" PARENT_SCOPE )
				set( CShape "no (GTK2 libraries not found)" PARENT_SCOPE )
				set( Ocean "no (GTK2 libraries not found)" PARENT_SCOPE )
			endif()
		endif()
	endif()
	if ( ${CASTOR_BUILD_SAMPLE_CASTOR_VIEWER_SHARP} )
		if ( MSVC )
			if ( ${CASTOR_BUILD_BINDING_COM} )
				set( Build ${CViewSh} )
				add_subdirectory( Samples/CastorViewerSharp )
				set( CViewSh ${Build} PARENT_SCOPE )
			else ()
				set( CViewSh "no (ComCastor3D not built)" PARENT_SCOPE )
			endif ()
		endif ()
	endif ()

	set( CastorMinLibraries
		${CastorMinLibraries}
		PARENT_SCOPE
	)

	set( CastorBinsDependencies
		${CastorBinsDependencies}
		PARENT_SCOPE
	)
endfunction( SamplesBuild )
    
function( SamplesSummary msg )
	set( msg_tmp "\n\nSamples :" )
	set( msg_tmp "${msg_tmp}\n    GuiCommon           ${GuiCmn}" )
	set( msg_tmp "${msg_tmp}\n    CastorViewer        ${CViewer}" )
	set( msg_tmp "${msg_tmp}\n    CastorShape         ${CShape}" )
	set( msg_tmp "${msg_tmp}\n    OceanLighting       ${Ocean}" )
	set( msg_tmp "${msg_tmp}\n    CastorViewerSharp   ${CViewSh}" )
	SET( msg "${msg}${msg_tmp}" PARENT_SCOPE )
endfunction( SamplesSummary )
